--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.1.0",
     "@contentful/rich-text-types": "^16.2.0",
+    "@segment/analytics-next": "^1.66.0",
     "@tailwindcss/typography": "^0.5.9",
     "@uniformdev/canvas-next-rsc": "19.86.0",
     "classnames": "^2.3.2",
     "color": "^4.2.3",
     "daisyui": "^2.51.6",
     "framer-motion": "10.16.2",
-    "next": "^14.0.3",
+    "next": "^14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.3",
